force-app/main/default/objects/openq__OPENQ_Education__c/openq__OPENQ_Education__c.object-meta.xml
<CustomObject>
    <label>Education</label>
    <nameField>
        <displayFormat>ED-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>