force-app/main/default/objects/openq__OPENQ_Education__c/fields/openq__Description__c.field-meta.xml
<CustomField>
    <fullName>openq__Description__c</fullName>
    <label>Description</label>
    <length>120</length>
    <type>Text</type>
</CustomField>