force-app/main/default/objects/openq__OPENQ_Education__c/fields/openq__Location__c.field-meta.xml
<CustomField>
    <fullName>openq__Location__c</fullName>
    <label>Location</label>
    <length>40</length>
    <type>Text</type>
</CustomField>