force-app/main/default/objects/openq__OPENQ_Education__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <columns>NAME</columns>
    <columns>openq__Description__c</columns>
    <columns>openq__Institution__c</columns>
    <columns>openq__Location__c</columns>
    <columns>openq__Degree__c</columns>
    <columns>openq__Begin_Year__c</columns>
    <columns>openq__End_Year__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>